--- a/src/view/src.html
+++ b/src/view/src.html
@@ -32,7 +32,7 @@
             <option value="orange">orange</option>
             <option value="purple">purple</option>
         </select>
-        <label for="name">Email</label>
+        <label for="email">Email</label>
         <input type="text" id="email" class="form-control" placeholder="Email">
       </div>
       <button class="btn btn-default">Join</button>
